# SOLAR-ROCm

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING  MANIFEST.in  README.md  install.sh  install_uv.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: orojenesis.yml
configs/arch/: A6000.yaml  Jetson_Thor_T5000.yaml  RX_9060_XT.yaml
configs/arch/evidence/: RX_9060_XT_resource_audit.yaml
configs/corpus/: RX_9060_XT_CONFORMANCE.yaml  RX_9060_XT_SOL_EXECBENCH.yaml
configs/corpus/evidence/: RX_9060_XT_SOL_EXECBENCH_audit.yaml
docker/: Dockerfile  README.md  g++-cstdint  write_orojenesis_provenance.py
docs/: EINSUM_GRAPH_CHECKER_GUIDE.md  EINSUM_GUIDE.md  FORMAT.md  QUANT_SUPPORT.md  ROCM_BENCHMARKING.md  SOL_EXECBENCH_GAPS.md  SOL_GUIDE.md  TESTING_GUIDE.md  USAGE.md  VERIFICATION_GUIDE.md
examples/Attention/: run_solar.sh
examples/BERT/: run_solar.sh
examples/Conv2d/: run_solar.sh
examples/Matmul/: run_solar.sh
examples/rocm_matmul/: benchmark.yaml  build_hip_extension.py  hip_extension.cu  hip_solution.yaml  reference.py  solution.py  solution.yaml  triton_solution.py  triton_solution.yaml
examples/rocm_matmul/analysis/n1024/: analysis.yaml  einsum_graph.yaml
examples/rocm_matmul/analysis/n2048/: analysis.yaml  einsum_graph.yaml
examples/rocm_matmul/verification/n1024/: verification.yaml
examples/rocm_matmul/verification/n2048/: verification.yaml
patches/: torchview-collect-attributes.patch
scripts/: README.md  run_tests.sh
solar/: __init__.py
solar/_vendor/: __init__.py
solar/analysis/: __init__.py  fusion.py  graph_analyzer.py  model_analyzer.py  orojenesis.py  resources.py
solar/benchmark/: __init__.py  backends.py  calibration.py  clock_lock.py  conformance_corpus.py  evaluator.py  models.py  official_corpus.py  scoring.py  sol_execbench.py  staging.py  timing.py
solar/cli/: analyze_model.py  audit_sol_execbench_corpus.py  build_official_corpus.py  build_source_to_sol.py  calibrate_rocm.py  check_sol_execbench.py  create_baseline.py  evaluate_rocm.py  predict_perf_model.py  rocm_doctor.py  toeinsum.py  toeinsum_model.py  verify_einsum.py  verify_einsum_model.py  verify_source_to_sol.py
solar/common/: constants.py  types.py  utils.py
solar/configs/: __init__.py
solar/configs/arch/: RX_9060_XT.yaml  __init__.py
solar/einsum/: __init__.py  af_graph_builder.py  af_graph_visualizer.py  analyzer.py  einsum_graph_visualizer.py  einsum_rank_renamer.py  graph_expander.py  llm_agent.py  node_type_registry.py  pytorch_to_einsum.py  semantics.py
solar/einsum/ops/: base.py  conv_ops.py  elementwise_ops.py  reduction_ops.py  shape_ops.py
solar/graph/: backward_processor.py  benchmark_processor.py  pytorch_processor.py  torchview_processor.py
solar/perf/: perf_model.py
solar/rocm/: __init__.py  architecture.py  environment.py
solar/verification/: __init__.py  einsum.py
tests/: test_aot_joint_backward.py  test_conv_depthwise.py  test_einsum_analyzer.py  test_einsum_cost_bugs.py  test_eval_attributes.py  test_graph_processing.py  test_integration.py  test_l1_violation_fixes.py  test_linux_aarch64_disabled.py  test_llm_agent.py  test_mixed_dtype_analysis.py  test_model_analyzer.py  test_nonpersistent_buffer_fallback.py  test_orojenesis_multi_integration.py  test_orojenesis_toolchain_identity.py  test_orphaned_subgraph_pruning.py  test_p0_semantics_and_fusion.py  test_p1_execbench_closure.py  test_perf_quant.py  test_rocm_architecture.py  test_rocm_benchmark_models.py  test_rocm_evaluate_cli.py  test_rocm_timing_and_score.py  test_sol_execbench_amd_compatibility.py  test_source_to_sol_verification.py  test_standalone_bert.py  test_torchview_processor.py
