# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solar"
version = "1.1.0"
description = "PyTorch model graph analysis and einsum optimization toolkit with LLM support"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Solar Team", email = "solar@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# Must match requirements.txt
dependencies = [
    "torch>=2.9.0",
    "torchview>=0.2.6",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "matplotlib>=3.5.0",
    "scipy>=1.10.0",
    "pandas>=1.5.0",
    "einops>=0.6.0",
    "huggingface-hub>=0.16.0",
    "safetensors>=0.3.0",
    "openai>=1.0.0",
    "graphviz>=0.20",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "pylint>=2.17.0",
    "mypy>=1.0.0",
]

[project.scripts]
solar-process = "solar.cli.process:main"
solar-process-model = "solar.cli.process_model:main"
solar-toeinsum = "solar.cli.toeinsum:main"
solar-toeinsum-model = "solar.cli.toeinsum_model:main"
solar-analyze-model = "solar.cli.analyze_model:main"
solar-predict-perf-model = "solar.cli.predict_perf_model:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["solar*"]
