# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solar"
version = "2.0.0"
description = "ROCm-native SOL analysis and executable kernel benchmarking for AMD GPUs"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "third_party/torchview/LICENSE"]
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Solar Team", email = "solar@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# Must match requirements.txt
dependencies = [
    "torch==2.11.0+rocm7.2; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "triton-rocm==3.6.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "matplotlib>=3.5.0",
    "scipy>=1.10.0",
    "pandas>=1.5.0",
    "pyarrow>=14.0.0",
    "einops>=0.6.0",
    "huggingface-hub>=0.16.0",
    "safetensors>=0.3.0",
    "openai>=1.0.0",
    "graphviz>=0.20",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "pylint>=2.17.0",
    "mypy>=1.0.0",
]

[project.scripts]
solar-process = "solar.cli.process:main"
solar-process-model = "solar.cli.process_model:main"
solar-toeinsum = "solar.cli.toeinsum:main"
solar-toeinsum-model = "solar.cli.toeinsum_model:main"
solar-analyze-model = "solar.cli.analyze_model:main"
solar-predict-perf-model = "solar.cli.predict_perf_model:main"
solar-rocm-doctor = "solar.cli.rocm_doctor:main"
solar-calibrate-rocm = "solar.cli.calibrate_rocm:main"
solar-evaluate = "solar.cli.evaluate_rocm:main"
solar-create-baseline = "solar.cli.create_baseline:main"
solar-verify-source-to-sol = "solar.cli.verify_source_to_sol:main"
solar-check-sol-execbench = "solar.cli.check_sol_execbench:main"
solar-build-source-to-sol = "solar.cli.build_source_to_sol:main"
solar-build-sol-execbench-corpus = "solar.cli.build_official_corpus:main"
solar-audit-sol-execbench-corpus = "solar.cli.audit_sol_execbench_corpus:main"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-rocm72"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm-root"
url = "https://download.pytorch.org/whl/"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-rocm72", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
triton-rocm = [
    { index = "pytorch-rocm-root", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[tool.setuptools]
include-package-data = false
packages = [
    "solar",
    "solar._vendor",
    "solar._vendor.torchview",
    "solar._vendor.torchview.computation_node",
    "solar.analysis",
    "solar.benchmark",
    "solar.cli",
    "solar.common",
    "solar.configs",
    "solar.configs.arch",
    "solar.einsum",
    "solar.einsum.ops",
    "solar.graph",
    "solar.perf",
    "solar.rocm",
    "solar.verification",
]

[tool.setuptools.package-dir]
"solar._vendor.torchview" = "third_party/torchview/src/torchview"

[tool.setuptools.package-data]
"solar._vendor.torchview" = ["py.typed"]
"solar.configs.arch" = ["*.yaml"]
